--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Black Jake - Home</title>
+    <title>BlackJack - Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-dark text-light">
@@ -20,10 +20,11 @@
 </nav>
 
 <div class="container text-center mt-5">
-    <h1>Welcome to Black Jake</h1>
+    <h1>Welcome to BlackJack</h1>
     <p>Blackjack project made using HTML, CSS, Bootstrap & JavaScript.</p>
     <a href="game.html" class="btn btn-primary btn-lg mt-3">Play Blackjack</a>
 </div>
 
 </body>
 </html>
+
