--- a/about.html
+++ b/about.html
@@ -17,10 +17,16 @@
     <p>This project is a simple demo to show basic web development using:</p>
     <ul>
         <li>HTML </li>
+        <p>HTML, also called HyperText Markup Language, is used in this project to create the layout and structure of all the pages. Each section of the website, such as the header, navigation bar, content area, and footer, is created using different HTML tags. HTML allows us to display text, images, links, buttons, forms, and game elements that are used in the Blackjack and Roulette pages.</p>
         <li>CSS + Bootstrap </li>
+        <p>CSS (Cascading Style Sheets) is used in this project to add styling to the HTML structure. It controls the layout, colors, text styles, backgrounds, spacing, and the look of buttons and game elements. CSS helps make the website more visually appealing and improves the user experience.</p>
         <li>JavaScript </li>
+        <p>JavaScript is the programming language that makes a website interactive.
+In my website, JavaScript is used to create the mini-games like Number Guessing, Rock-Paper-Scissors, and Roulette. It handles all the game logic such as generating random numbers, checking the user’s input, showing results like “You win” or “Game over,” and updating the score.
+Without JavaScript, the website would only display text and buttons, but nothing would actually work. JavaScript makes the page respond to clicks, show alerts, change content on the screen, and make the games playable.</p>
     </ul>
 </div>
 
 </body>
 </html>
+
