--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-dark text-light">
-
 <nav class="navbar navbar-dark bg-black navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Black Jake</a>
+        <a class="navbar-brand" href="index.html">BlackJack</a>
         <div>
             <a class="nav-link d-inline text-light" href="about.html">About</a>
             <a class="nav-link d-inline text-light" href="features.html">Features</a>
@@ -23,8 +22,10 @@
     <p>Blackjack project made using HTML, CSS, Bootstrap & JavaScript.</p>
     <a href="game.html" class="btn btn-primary btn-lg mt-3">Play Blackjack</a>
 </div>
+    <div class="p-3 mb-2 bg-body-tertiary">.bg-body-tertiary</div>
 
 </body>
 </html>
+
 
 
