--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <title>BlackJack - Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <style>body {
+    font-family: Arial, sans-serif;
+}
+h1 {
+    color: #333;
+}
+button {
+    padding: 10px 15px;
+    background-color: lightblue;
+    border: none;
+    cursor: pointer;
+}
+button:hover {
+    background-color: skyblue;
+}
+p {
+    font-size: 16px;
+}
+</style>
 </head>
 <body class="bg-dark text-light">
-     <div class="p-3 mb-2 bg-body-tertiary">.bg-body-tertiary</div>
 <nav class="navbar navbar-dark bg-black navbar-expand-lg">
     <div class="container">
         <a class="navbar-brand" href="index.html">BlackJack</a>
@@ -27,6 +45,7 @@
 
 </body>
 </html>
+
 
 
 
