--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BlackJack - Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <style>body {
-    font-family: Arial, sans-serif;
-}
-h1 {
-    color: #333;
-}
-button {
-    padding: 10px 15px;
-    background-color: lightblue;
-    border: none;
-    cursor: pointer;
-}
-button:hover {
-    background-color: skyblue;
-}
-p {
-    font-size: 16px;
-}
-</style>
-</head>
-<body class="bg-dark text-light">
-<nav class="navbar navbar-dark bg-black navbar-expand-lg">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">BlackJack</a>
-        <div>
-            <a class="nav-link d-inline text-light" href="about.html">About</a>
-            <a class="nav-link d-inline text-light" href="features.html">Features</a>
-            <a class="nav-link d-inline text-light" href="game.html">Game</a>
-            <a class="nav-link d-inline text-light" href="contact.html">Contact</a>
-        </div>
-    </div>
-</nav>
+    <title>Casino Mini Games</title>
 
-<div class="container text-center mt-5">
-    <h1>Welcome to BlackJack</h1>
-    <p>Blackjack project made using HTML, CSS, Bootstrap & JavaScript.</p>
-    <a href="game.html" class="btn btn-primary btn-lg mt-3">Play Blackjack</a>
-</div>
-   
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+            background-color: lightblue;
+            padding: 10px 15px;
+            display: inline-block;
+            margin: 10px;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: skyblue;
+        }
+
+        .container {
+            margin-top: 30px;
+        }
+    </style>
+
+</head>
+<body>
+
+    <h1>Welcome to Casino Mini Games</h1>
+    <p>This website contains simple and fun games made using HTML, CSS, and JavaScript.</p>
+    
+    <div class="container">
+        <a href="about.html">About</a>
+        <a href="features.html">Features</a>
+        <a href="game.html">Play Games</a>
+        <a href="contact.html">Contact</a>
+    </div>
 
 </body>
 </html>
-
-
-
-
-
