--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #4A0000; /* dark red */
-            color: white; /* text becomes readable */
+            background-color: #4A0000; 
+            color: white; 
         }
 
         h1 {
@@ -24,27 +24,23 @@
         p {
             font-size: 20px;
         }
-
-        /* EXTRA LARGE BUTTONS WITH DARK RED THEME */
         a {
             text-decoration: none;
             color: white;
-            background-color: #990000;     /* dark red button */
-            padding: 30px 40px;           /* XL size */
+            background-color: #990000;    /
+            padding: 30px 40px;           
             display: inline-block;
             margin: 20px;
             border-radius: 10px;
             font-size: 26px;
             font-weight: bold;
             width: 300px;
-            border: 2px solid #FF4444;    /* brighter red border */
+            border: 2px solid #FF4444;
         }
-
         a:hover {
-            background-color: #CC0000;    /* lighter red on hover */
+            background-color: #CC0000;    
         }
 
-        /* Bottom section */
         .container {
             margin-top: auto;
             padding-bottom: 60px;
@@ -53,16 +49,14 @@
 
 </head>
 <body>
-
     <h1>Welcome to Casino Mini Games</h1>
     <p>This website contains simple and fun games made using HTML, CSS, and JavaScript.</p>
-    
     <div class="container">
         <a href="about.html">About</a><br>
         <a href="features.html">Features</a><br>
         <a href="game.html">Play Games</a><br>
         <a href="contact.html">Contact</a>
     </div>
-
 </body>
 </html>
+
