--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #4A0000; 
-            color: white; 
+            background-color: #4A0000;
+            color: white;
         }
 
         h1 {
@@ -24,21 +24,23 @@
         p {
             font-size: 20px;
         }
+
         a {
             text-decoration: none;
             color: white;
-            background-color: #990000;    /
-            padding: 30px 40px;           
+            background-color: #333333;
+            padding: 30px 40px;
             display: inline-block;
             margin: 20px;
-            border-radius: 10px;
+            border-radius: 0px;
             font-size: 26px;
             font-weight: bold;
             width: 300px;
-            border: 2px solid #FF4444;
+            border: 3px solid #555555;
         }
+
         a:hover {
-            background-color: #CC0000;    
+            background-color: #555555;
         }
 
         .container {
@@ -49,14 +51,16 @@
 
 </head>
 <body>
+
     <h1>Welcome to Casino Mini Games</h1>
     <p>This website contains simple and fun games made using HTML, CSS, and JavaScript.</p>
+    
     <div class="container">
         <a href="about.html">About</a><br>
         <a href="features.html">Features</a><br>
         <a href="game.html">Play Games</a><br>
         <a href="contact.html">Contact</a>
     </div>
-</body>
-</html>
 
+</body>
+</html
