--- a/index.html
+++ b/index.html
@@ -7,53 +7,61 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 20px;
             margin: 0;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #4A0000;
-            color: white;
+            background: linear-gradient(180deg, #2b0000, #000000);
+            color: gold;
         }
 
         h1 {
-            margin-top: 40px;
-            font-size: 40px;
+            margin-top: 50px;
+            font-size: 55px;
+            font-weight: 900;
+            letter-spacing: 3px;
+            text-shadow: 0 0 10px #ffcc00;
         }
 
         p {
-            font-size: 20px;
+            font-size: 22px;
+            margin-bottom: 40px;
+            color: #ffdd88;
         }
 
         a {
             text-decoration: none;
-            color: white;
-            background-color: #333333;
-            padding: 30px 40px;
+            color: gold;
+            background-color: #222222;
+            padding: 25px 40px;
             display: inline-block;
-            margin: 20px;
+            margin: 25px;
             border-radius: 0px;
-            font-size: 26px;
+            font-size: 28px;
             font-weight: bold;
-            width: 300px;
-            border: 3px solid #555555;
+            width: 320px;
+            border: 4px solid gold;
+            box-shadow: 0 0 15px #ffcc00;
+            transition: 0.2s;
         }
 
         a:hover {
-            background-color: #555555;
+            background-color: #444444;
+            box-shadow: 0 0 25px gold;
+            transform: scale(1.05);
         }
 
         .container {
             margin-top: auto;
-            padding-bottom: 60px;
+            padding-bottom: 70px;
         }
     </style>
 
 </head>
 <body>
 
-    <h1>Welcome to Casino Mini Games</h1>
-    <p>This website contains simple and fun games made using HTML, CSS, and JavaScript.</p>
+    <h1>CASINO MINI GAMES</h1>
+    <p>Play simple and fun games built using HTML, CSS, and JavaScript.</p>
     
     <div class="container">
         <a href="about.html">About</a><br>
@@ -63,4 +71,4 @@
     </div>
 
 </body>
-</html
+</html>
